# as-en

./: .gitignore  CMakeLists.txt  LICENSE  Readme.md
AE/: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md
AE/android/: .gitignore  build.gradle  settings.gradle
AE/android/cicd/: build.gradle
AE/android/demo/: build.gradle
AE/android/engine/: build.gradle
AE/android/rg-device/: build.gradle
AE/android/test/: build.gradle
AE/build_scripts/: clone_3party.bat
AE/build_scripts/android/: _build-debug.bat  _build-release.bat  _main.bat  build-debug.bat  build-release.bat  cleanup.bat  copy-graphics-test-result.bat
AE/build_scripts/emscripten/: build.bat  run_ems.bat
AE/build_scripts/ios/: init.sh  run_tests.sh
AE/build_scripts/linux/: build_clang15.sh  build_clang15_ninja.sh  build_clang16.sh  build_clang16_ninja.sh  build_gcc12.sh  build_gcc13.sh  clang_install.md  init_clang15.sh  init_clang15_ninja.sh  init_clang16.sh  init_clang16_ninja.sh  init_gcc12.sh  init_gcc13.sh  run_tests_clang15.sh  run_tests_clang15_ninja.sh  run_tests_clang16.sh  run_tests_clang16_ninja.sh  run_tests_gcc12.sh  run_tests_gcc13.sh
AE/build_scripts/mac_arm64/: init-vk.sh  init.sh  run_tests.sh
AE/build_scripts/mac_x64/: init-mtl.sh  init-vk.sh  init.sh  init_on_arm-mtl.sh  init_on_arm-vk.sh  init_on_arm.sh  run_tests.sh
AE/build_scripts/win_arm64/: init.bat
AE/build_scripts/win_vc2022/: build.bat  init.bat  init_noexc.bat  init_precompiled.bat  precompile_engine.bat  run_tests.bat
AE/build_scripts/win_x64/: init_no_pch.bat  init_rem.bat  precompile_engine.bat
AE/build_scripts/win_x64_clang/: init_clang.bat  init_clang_rem.bat
AE/docs/: CMakeLists.txt  EngineDocs.md  Papers.md  Tools.md
AE/docs/engine/: Build.md  Concept.md  DeviceProperties.md  EngineFeatures.md  FeatureSet.md  GraphicsResources.md  MetalFeatures.md  Platforms.md  Profiling.md  RemoteGraphicsFeatures.md  RenderGraph-ru.md  RenderTaskScheduler-ru.md  ResourceCompilation.md  TaskScheduler-ru.md  VirtualFileSystem-ru.md  VulkanFeatures.md
AE/docs/papers/: ArchitectureNotes-ru.md  AsyncProgramming-ru.md  GPU_Benchmarks.md  GraphicsNotes-ru.md  HDR_Display.md  SphericalCube-ru.md
AE/engine/: CMakeLists.txt  Changelog.md
AE/engine/cmake/: compiler_tests.cmake  compilers.cmake  config.cmake  utils.cmake  version.cmake
AE/engine/deprecated/: Readme.md
AE/engine/docs/: Build.md  CMakeLists.txt  Concept.md  DeviceProperties.md  FeatureSet.md  GraphicsResources.md  HDR_Display.md  MetalFeatures.md  Platforms.md  Profiling.md  ResourceCompilation.md  VulkanFeatures.md
AE/engine/pch/: Audio.h  Base.h  Graphics.h  GraphicsHL.h  Networking.h  Platform.h  Scripting.h  Serializing.h  Threading.h  VFS.h  Video.h
AE/engine/performance/: CMakeLists.txt
AE/engine/src/: CMakeLists.txt
AE/engine/tests/: .gitignore  CMakeLists.txt
AE/engine/tools/: CMakeLists.txt  EngineTools.cmake
AE/samples/: CMakeLists.txt
AE/samples/demo/: CMakeLists.txt  Common.h  Demo.pch.h  Readme.md
AE/samples/res_editor/: .gitignore  CMakeLists.txt  Changelog.md  Common.h  Readme.md  ResourceEditor.pch.h
engine/: CMakeLists.txt  Changelog.md  code_stat.txt
engine/cmake/: compiler_tests.cmake  compilers.cmake  config.cmake  version.cmake  vtune.cmake
engine/cmake/project_template/: CMakeLists.txt
engine/docs/: Build.md  DeviceProperties.md  FeatureSet.md  HDR_Display.md  Profiling.md  VulkanFeatures.md
engine/docs/en/: DeviceProperties.md  FeatureSet.md  MetalFeatures.md  Platforms.md  Profiling.md  VulkanFeatures.md
engine/docs/ru/: Build.md  HDR_Display.md  PipelinePack.md  RenderGraph.md  RenderTaskScheduler.md  TaskScheduler.md  VirtualFileSystem.md
engine/pch/: Base.h  ECS-st.h  Graphics.h  GraphicsHL.h  HuLang.h  Platform.h  Profiler.h  Scripting.h  Serializing.h  Threading.h  VFS.h
engine/shared_data/3party_shaders/: Blur-1.glsl  Hash-2.glsl  Noise-2.glsl  ToneMapping-1.glsl
engine/shared_data/feature_set/: min_desktop_intel.as  min_desktop_nv.as  min_mobile.as  minimal.as
engine/shared_data/scripts/: asset_packer.as  offline_packer.as
engine/shared_data/shaders/: AABB.glsl  ColorSpaceUtility.glsl  CubeMap.glsl  Fog.glsl  Geometry.glsl  Intersectors.glsl  Math.glsl  Matrix.glsl  Ray.glsl  ReliefMapping.glsl  Sphere.glsl  ToneMapping.glsl  Waves.glsl  aestyle.glsl.h
engine/src/: .gitignore  CMakeLists.txt
engine/src/base/: .gitignore  Base.pch.h  CMakeLists.txt  Common.h  Config.h  StdInclude.h
engine/src/ecs-st/: CMakeLists.txt  Common.h
engine/src/graphics/: CMakeLists.txt  Graphics.pch.h
engine/src/graphics_hl/: CMakeLists.txt
engine/src/hulang/: CMakeLists.txt  Common.h  HuLang.pch.h
engine/src/networking/: CMakeLists.txt  Networking.pch.h
engine/src/platform/: CMakeLists.txt  Platform.pch.h
engine/src/profiler/: CMakeLists.txt  Profiler.pch.h  ProfilerUI.h
engine/src/scripting/: CMakeLists.txt  Scripting.pch.h
engine/src/serializing/: CMakeLists.txt  Common.h  Deserializer.h  ISerializable.h  ObjectFactory.h  Serializer.h
engine/src/threading/: CMakeLists.txt  Common.h
engine/src/vfs/: CMakeLists.txt  Common.h  VFS.pch.h  VirtualFileSystem.h
engine/src/video/: CMakeLists.txt
engine/tests/: .gitignore  CMakeLists.txt
engine/tests/asset_packer/: CMakeLists.txt  Test_Common.h  Test_FeatureSetPack.cpp  Test_ImageAtlasPack.cpp  Test_InputActions.cpp  Test_MaterialPack.cpp  Test_PipelinePack.cpp  Test_RenderPassPack.cpp  Test_SamplerPack.cpp  main.cpp
engine/tests/atlas_tools/: CMakeLists.txt  UnitTest_RectPacker.cpp  UnitTest_RectPackerSTB.cpp  main.cpp
engine/tests/base/: CMakeLists.txt  UnitTest_Array.cpp  UnitTest_Cast.cpp  UnitTest_Color.cpp  UnitTest_Common.h  UnitTest_DataSource.cpp  UnitTest_Date.cpp  UnitTest_EnumBitSet.cpp  UnitTest_FileSystem.cpp  UnitTest_FixedArray.cpp  UnitTest_FixedMap.cpp  UnitTest_FixedSet.cpp  (+32 more)
engine/tools/: .gitignore  CMakeLists.txt
samples/demo/: CMakeLists.txt  Common.h  Demo.pch.h
samples/res_editor/: .gitignore  CMakeLists.txt  Changelog.md  Common.h  EditorCore.cpp  EditorCore.h  EditorUI.cpp  EditorUI.h  Readme.md
(+3706 files in other folders)
